--- a/gamehub.client/src/components/Navbar.module.css
+++ b/gamehub.client/src/components/Navbar.module.css
@@ -58,7 +58,6 @@
     border-radius: 5px;
     border: 2px solid var(--mediumgrey);
     background-color: var(--lightBlack);
-    padding: 5px 10px;
 }
 
 .profileOpt .option{
@@ -202,4 +201,160 @@
     font-weight: normal;
     font-size: 15px;
     color: var(--grey);
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+    .divNavbar{
+        padding: 5px;
+    }
+
+    .noRegistry{
+        font-size: 10px;
+        text-align: center;
+    }
+
+    .img{
+        min-width: 25px;
+        min-height: 25px;
+        max-width: 25px;
+        max-height: 25px;
+        border: 0px;
+    }
+
+    .ulNavbar .navbarLink, .ulNavbar .navbarLink span{
+        font-size: 10px;
+        gap: 2px;
+        font-weight: bold;
+        letter-spacing: 0px;
+        border: 1px solid transparent;
+        border-radius: 50px;
+        padding: 0px 2px;
+    }
+
+    .ulNavbar .navbarLink:hover{
+        border: 0px;
+        transform: scale(1.1);
+        background-color: var(--turquoise);
+        color: var(--black);
+    }
+
+    .logoLink, .ulNavbar, li, .navbarLink{
+        gap: 0px;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .logoLink h1{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .searchBar{
+        width: 40%;
+        margin: 0;
+        height: 80%;
+        padding: 0px;
+    }
+
+    .searchBar .icon{
+        position: absolute;
+        fill: var(--grey);
+        left: 5px;
+        font-size: 10px;
+        transition: all 0.3s ease;
+    }
+    
+    .searchBar input{
+        width: 100%;
+        height: 100%;
+        padding: 5px 5px 5px 18px;
+        border: 1px solid var(--grey);
+        font-size: 10px;
+        color: var(--whitesmoke);
+        background-color: transparent;
+        transition: all 0.3s ease;
+    }
+    
+    .searchBar input::placeholder{
+        font-size: 8px;
+    }
+    
+    .simplifiedDisplay{
+        gap: 2px;
+        top: 26px;
+        min-width: 30%;
+        max-width: 85%;
+        padding: 2px;
+        border-radius: 5px;
+        border: 1px solid var(--grey);
+    }
+    
+    .simplifiedDisplay .spanData{
+        padding: 2px;
+        border-radius: 5px;
+        border: 0px;
+        gap: 2px;
+    }
+
+    .simplifiedDisplay .spanData img{
+        min-width: 20px;
+        min-height: 20px;
+        max-width: 20px;
+        max-height: 20px;
+        border: 0px;
+    }
+
+    .profileOpt{
+        bottom: -50px;
+        right: 5px;
+        gap: 2px;
+        padding: 2px 6px;
+        border-radius: 5px;
+        border: 1px solid var(--mediumgrey);
+    }
+    
+    .profileOpt .option{
+        font-size: 10px;
+        padding: 5px;
+    }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 768px) {
+    .divNavbar{
+        padding: 8px 10px 10px 10px;
+    }
+    .logoLink, .ulNavbar{
+        gap: 2px;
+    }
+    .ulNavbar .navbarLink span{
+        font-size: 15px;
+    }
+    .searchBar{
+        width: 40%;
+    }
+}
+
+/* Desktop */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .divNavbar{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 8px 1rem 10px 1rem;
+    }
+    .logoLink, .ulNavbar{
+        margin-top: 8px;
+        gap: 5px;
+    }
+    .ulNavbar .navbarLink span{
+        font-size: 18px;
+    }
+
+    .searchBar{
+        width: 50%;
+        margin-top: 10px;
+    }
 }
