--- a/gamehub.client/src/routes/ListCommunities.module.css
+++ b/gamehub.client/src/routes/ListCommunities.module.css
@@ -165,3 +165,123 @@
     color: var(--grey);
     bottom: 0;
 }
+
+/* Mobile */
+@media (max-width: 480px) {
+    .content h3,
+    .content span,
+    .mainContent h2{
+        text-align: center;
+    }
+
+    .content h3{
+        font-size: 20px;
+    }
+
+    .divCenter{
+        margin-top: 45px;
+    }
+
+    .content {
+        width: 50%;
+    }
+
+    .communityData {
+        width: 80px;
+        height: 130px;
+        gap: 5px;
+    }
+
+    .communityData .communityBackground {
+        min-height: 45px;
+        max-height: 45px;
+    }
+    
+    .communityData .communityImg {
+        min-width: 55px;
+        min-height: 55px;
+        max-width: 55px;
+        max-height: 55px;
+    }
+
+    .communityData p {
+        font-size: 13px;
+    }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 768px) {
+    .content h3,
+    .content span,
+    .mainContent h2{
+        text-align: center;
+    }
+
+    .content {
+        width: 50%;
+    }
+
+    .communityData {
+        width: 130px;
+        height: 150px;
+        gap: 5px;
+    }
+
+    .communityData .communityBackground {
+        min-height: 60px;
+        max-height: 60px;
+    }
+    
+    .communityData .communityImg {
+        min-width: 65px;
+        min-height: 65px;
+        max-width: 65px;
+        max-height: 65px;
+    }
+
+    .communityData p {
+        font-size: 15px;
+    }
+}
+
+/* Desktop */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .content {
+        width: 60%;
+    }
+
+    .content h3,
+    .content span,
+    .mainContent h2{
+        text-align: center;
+    }
+
+    .communityData {
+        width: 130px;
+        height: 150px;
+        gap: 5px;
+    }
+
+    .communityData .communityBackground {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        min-height: 60px;
+        max-height: 60px;
+    }
+    
+    .communityData .communityImg {
+        min-width: 80px;
+        min-height: 80px;
+        max-width: 80px;
+        max-height: 80px;
+        border-radius: 100%;
+        object-fit: cover;
+        border: 2px solid var(--black);
+        z-index: 1;
+    }
+    
+    .communityData p {
+        font-size: 15px;
+    }
+}
