--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -59,3 +59,18 @@
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 480px) {
+    .divCenter{
+        margin-top: 45px;
+    }
+
+    .buttonMakePost{
+        margin-top: 5px;
+    }
+
+    .divMakePost{
+        font-size: 15px;
+        gap: 5px;
+    }
+}
