--- a/gamehub.client/src/routes/Profile.module.css
+++ b/gamehub.client/src/routes/Profile.module.css
@@ -509,8 +509,8 @@ p:hover .spanPublic,
     }
 
     .divUser {
-        margin-left: 14%;
-        width: 70%;
+        width: 90%;
+        margin-top: 45px;
     }
 
     .userImg {
@@ -547,7 +547,7 @@ p:hover .spanPublic,
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: -140px 0px;
+        margin: -155px 0px 0px;
     }
 
     .userDataHeader h2 {
@@ -566,7 +566,7 @@ p:hover .spanPublic,
     }
 
     .userInfoFooter {
-        margin-top: 138px;
+        margin-top: 0px;
     }
 
     .divBiography {
@@ -628,6 +628,7 @@ p:hover .spanPublic,
         max-width: 200px;
         max-height: 200px;
         margin-bottom: 0rem;
+        border: 4px solid var(--deepgray);
     }
 
     .footerDiv {
