Deixando algumas páginas responsivas

--- a/gamehub.client/src/components/ListUsersPostsComponnent.module.css
+++ b/gamehub.client/src/components/ListUsersPostsComponnent.module.css
@@ -384,6 +384,13 @@
 
 /* Mobile */
 @media (max-width: 480px) {
+    .containerPosts .pageTitle{
+        font-weight: 100;
+        font-size: 20px;
+        margin-bottom: 1rem;
+        text-align: center;
+    }
+
     .containerPosts {
         width: 100%;
     }
