--- a/gamehub.client/src/routes/IsolatedPost.module.css
+++ b/gamehub.client/src/routes/IsolatedPost.module.css
@@ -342,3 +342,143 @@
         opacity: 100%;
     }
 }
+
+@media (max-width: 480px) {
+    .divCenter{
+        margin-top: 45px;
+    }
+
+    .divContent{
+        gap: 1rem;
+        width: 75%;
+    }
+}
+
+
+/* Mobile */
+@media (max-width: 480px) {
+    .containerPosts {
+        width: 75%;
+    }
+
+    .communityLink{
+        width: 100%;
+    }
+
+    .postHeader,
+    .headerInfo {
+        gap: 2px;
+    }
+    
+    .divPost:hover .youSpan {
+        display: block;
+    }
+
+    .divPost:hover .postOption {
+        display: flex;
+    }
+
+    .youSpan{
+        font-size: 10px;
+    }
+
+    .postOption{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 30px;
+    }
+
+    .postHeader .headerControl{
+        justify-content: none;
+    }
+
+    .iconButton{
+        font-size: 12px;
+        margin: 0 4px;
+        padding: 0;
+    }
+
+    .divAuthor .infoAuthor {
+        bottom: -20%;
+        left: 15px;
+    }
+
+    .divAuthor .infoAuthor img{
+        border-radius: 50%;
+        max-width: 120px;
+        min-width: 120px;
+        max-height: 120px;
+        min-height: 120px;
+        border: 5px solid var(--deepgray);
+    }
+
+    .divPost{
+        margin-top: 1rem;
+        width: 100%;
+        padding: 10px 0px;
+        gap: 15px;
+    }
+
+    .date, .authorHeader span{
+        display: none;
+    }
+    
+    .authorHeader .author{
+        font-size: 15px;
+    }
+
+    .postContent .title{
+        font-size: 18px;
+    }
+
+    .postContent .content{
+        font-size: 15px;
+    }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 768px) {
+    .infoAuthor .authorHeader{
+        gap: 5px;
+        padding: 10px 5px;
+        text-align: center;
+        flex-wrap: wrap;
+        max-width: 100%;
+    }
+    
+    .authorHeader p, .authorHeader .date, .authorHeader span{
+        font-size: 20px;
+    }
+
+    .authorHeader span{
+        display: none;
+    }
+    
+    .authorHeader .date{
+        font-size: 14px;
+    }
+
+    .postContent .title{
+        font-size: 20px;
+    }
+}
+
+/* Desktop */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .infoAuthor .authorHeader{
+        gap: 5px;
+        padding: 10px 5px;
+        text-align: center;
+        flex-wrap: wrap;
+        max-width: 100%;
+    }
+    
+    .authorHeader p, .authorHeader .date, .authorHeader span{
+        font-size: 25px;
+    }
+    
+    .authorHeader .date{
+        font-size: 16px;
+    }
+}
