--- a/gamehub.client/src/routes/ListFollowersOrFollowing.module.css
+++ b/gamehub.client/src/routes/ListFollowersOrFollowing.module.css
@@ -184,7 +184,12 @@
     }
 
     .content {
-        width: 50%;
+        width: 70%;
+    }
+
+    .searchBar{
+        width: 65%;
+        height: 30px;
     }
 
     .userData {
