--- a/gamehub.client/src/routes/GamesPage.module.css
+++ b/gamehub.client/src/routes/GamesPage.module.css
@@ -152,6 +152,65 @@
     transition: all 0.5s ease;
 }
 
+.btnSummary{
+    width: 100%;
+    background-color: transparent;
+    font-size: 16px;
+    color: var(--lightGrey);
+    transition: all 0.5s ease;
+}
+
+.btnSummary:hover{
+    color: var(--whitesmoke);
+}
+
+.divSummary{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px 2px;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--black);
+}
+
+.bigGameData{
+    transform: scale(1.5);
+    z-index: 2;
+    box-shadow: 2px 2px 10px 5px transparent;
+    border: 2px solid var(--grey);
+}
+
+.bigGameData:hover,
+.bigGameData:focus {
+    transform: scale(1.5);
+    box-shadow: 2px 2px 10px 5px transparent;
+}
+
+.divContent{
+    max-height: 93%;
+    overflow-y: auto;
+    padding: 5px 3px;
+    border-radius: 5px;
+    background-color: var(--clearblack);
+    
+}
+
+.divSummary .summaryContent{
+    font-size: 12px;
+    color: var(--lightGrey);
+}
+
+.divSummary .btnSummary{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 .divSimplifiedData h2,
 .divSimplifiedData p{
     white-space: nowrap;
