--- a/gamehub.client/src/routes/Library.module.css
+++ b/gamehub.client/src/routes/Library.module.css
@@ -136,6 +136,57 @@
     white-space: normal;
 }
 
+.divPin{
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    top: 0;
+}
+
+.divPin button{
+    border: 1px solid transparent;
+    background-color: transparent;
+    border-bottom-left-radius: 5px;
+    padding: 0px 2px;
+    background-color: var(--clearblack);
+    transition: all 0.3s ease;
+}
+
+.divPin .pinController{
+    border: 1px solid transparent;
+    background-color: transparent;
+    border-bottom-left-radius: 5px;
+    padding: 0px 2px;
+    background-color: var(--clearblack);
+    transition: all 0.3s ease;
+}
+
+.divPin .pinController .iconPin{
+    font-size: 25px;
+}
+
+.iconDontPin,
+.iconPin{
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+
+.divPin button:hover{
+    transform: scale(1.2);
+}
+
+.divPin button:hover .iconDontPin{
+    fill: var(--turquoise);
+}
+
+.iconDontPin{
+    fill: var(--lightGrey);
+}
+
+.iconPin{
+    fill: var(--turquoise);
+}
+
 .gameImg {
     width: 200px;
     min-height: 260px;
@@ -159,6 +210,65 @@
     border-radius: 5px;
     opacity: 0;
     transition: all 0.5s ease;
+}
+
+.btnSummary{
+    width: 100%;
+    background-color: transparent;
+    font-size: 16px;
+    color: var(--lightGrey);
+    transition: all 0.5s ease;
+}
+
+.btnSummary:hover{
+    color: var(--whitesmoke);
+}
+
+.divSummary{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px 2px;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--black);
+}
+
+.bigGameData{
+    transform: scale(1.5);
+    z-index: 2;
+    box-shadow: 2px 2px 10px 5px transparent;
+    border: 2px solid var(--grey);
+}
+
+.bigGameData:hover,
+.bigGameData:focus {
+    transform: scale(1.5);
+    box-shadow: 2px 2px 10px 5px transparent;
+}
+
+.divContent{
+    max-height: 93%;
+    overflow-y: auto;
+    padding: 5px 3px;
+    border-radius: 5px;
+    background-color: var(--clearblack);
+    
+}
+
+.divSummary .summaryContent{
+    font-size: 12px;
+    color: var(--lightGrey);
+}
+
+.divSummary .btnSummary{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .divSimplifiedData h2,
@@ -292,6 +402,21 @@
     border-color: var(--darkcyan);
     color: var(--black);
     font-weight: bold;
+}
+
+.bigGameData .gameState .statusVouJogar{
+    border-color: transparent;
+}
+
+.bigGameData .gameState .statusJogando{
+    background-color: transparent;
+    border-color: transparent;
+    box-shadow: 0px 0px 5px transparent;
+}
+
+.bigGameData .gameState .statusJaJoguei{
+    background-color: transparent;
+    border-color: transparent;
 }
 
 .divStatus{
